# pypixelcolor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
docs/: index.fr.md  index.md
docs/assets/css/: custom.css
docs/commands/: clock.fr.md  clock.md  content.fr.md  content.md  data.fr.md  data.md  other.fr.md  other.md  settings.fr.md  settings.md
docs/getting_started/: cli.fr.md  cli.md  installation.fr.md  installation.md  library.fr.md  library.md  websocket.fr.md  websocket.md
docs/guides/: android_ble_logs.fr.md  android_ble_logs.md  custom_fonts.fr.md  custom_fonts.md
docs/troubleshooting/: bluetooth_connection.fr.md  bluetooth_connection.md
src/pypixelcolor/: cli.py
src/pypixelcolor/commands/: __init__.py  scoreboard.py  send_image.py  send_text.py  set_clock_mode.py  set_time.py
src/pypixelcolor/fonts/: CUSONG.json  SIMSUN.json  VCR_OSD_MONO.json  font_enum.py
src/pypixelcolor/lib/: font_config.py
tests/resources/: send_text_32.json
